--- a/sleep/static/src/css/sleep.scss
+++ b/sleep/static/src/css/sleep.scss
@@ -58,9 +58,9 @@
 .o-mail-Thread-newMessage {
     display: none !important;
 }
-.o-mail-DateSection {
-    display: none !important;
-}
+//.o-mail-DateSection {
+//    display: none !important;
+//}
 .o-mail-Message-header {
     display: none !important;
 }
