--- a/app_theme/static/src/css/app_theme.scss
+++ b/app_theme/static/src/css/app_theme.scss
@@ -1,8 +1,8 @@
 /* Styles for control panel  */
 .o_action_manager > .o_kanban_view > .o_control_panel {
-  background-color: transparent;
-  backdrop-filter: blur(30px) !important;
-  -webkit-backdrop-filter: blur(30px) !important;
+  background-color: rgba(20,30,54, 0.5);
+  backdrop-filter: blur(10px) !important;
+  -webkit-backdrop-filter: blur(10px) !important;
   //box-shadow: 0 5px 10px 3px rgba(0, 0, 0, .05);
   z-index: 90;
   position: fixed;
@@ -12,7 +12,9 @@
   border: 0 !important;
 
   @include media-breakpoint-up(md) {
-    padding-top: 60px !important;
+    //padding-top: 60px !important;
+    padding-top: 11px !important;
+    padding-bottom: 11px !important;
   }
 
   @include media-breakpoint-down(md) {
@@ -21,9 +23,9 @@
   }
 }
 .o_action_manager > .o_form_view > .o_form_view_container > .o_control_panel {
-  background-color: transparent;
-  backdrop-filter: blur(30px) !important;
-  -webkit-backdrop-filter: blur(30px) !important;
+  background-color: rgba(20,30,54, 0.5);
+  backdrop-filter: blur(10px) !important;
+  -webkit-backdrop-filter: blur(10px) !important;
   //box-shadow: 0 5px 10px 3px rgba(0, 0, 0, .05);
   z-index: 90;
   position: fixed;
@@ -33,7 +35,9 @@
   border: 0 !important;
 
   @include media-breakpoint-up(md) {
-    padding-top: 60px !important;
+    //padding-top: 60px !important;
+    padding-top: 11px !important;
+    padding-bottom: 11px !important;
   }
 
   @include media-breakpoint-down(md) {
@@ -44,21 +48,31 @@
 
 /* Navbar (menu items) */
 .o_main_navbar {
-  background-color: transparent;
-  backdrop-filter: blur(30px) !important;
-  -webkit-backdrop-filter: blur(30px) !important;
+  background-color: rgba(20,30,54, 0.5);
+  backdrop-filter: blur(10px) !important;
+  -webkit-backdrop-filter: blur(10px) !important;
   position: fixed;
   right: 0;
   left: 0;
   z-index: 100;
-  height: 60px !important;
+  padding-top: 7px !important;
+  height: 80px !important;
+  @supports (-webkit-touch-callout: none) {
+    height: 80px !important;
+  }
 
+  @include media-breakpoint-up(md) {
+    bottom: 0;
+  }
   @include media-breakpoint-down(md) {
     bottom: 0;
   }
 }
 
 .o_control_panel_main {
+  @include media-breakpoint-up(md) {
+    height: 38px !important;
+  }
   @include media-breakpoint-down(md) {
     height: 38px !important;
   }
@@ -66,6 +80,10 @@
 
 /*!* Disable border around kanban record *!*/
 .oe_kanban_global_click {
+  @include media-breakpoint-up(md) {
+    border-left: 0 !important;
+    border-right: 0 !important;
+  }
   @include media-breakpoint-down(md) {
     border-left: 0 !important;
     border-right: 0 !important;
@@ -75,13 +93,13 @@
 
 /* Added padding-top for navbar in form and kanban*/
 .o_action_manager > .o_form_view > .o_form_view_container > .o_content > .o_form_renderer {
-  padding-top: 80px !important;
-  padding-bottom: 60px !important;
+  padding-top: 60px;
+  padding-bottom: 80px !important;
 
-  @include media-breakpoint-up(md) {
-     padding-top: 130px !important;
-    padding-bottom: 60px !important;
-  }
+  //@include media-breakpoint-up(md) {
+  //   padding-top: 130px !important;
+  //  padding-bottom: 60px !important;
+  //}
 }
 
 /* Added padding-top for player in form and kanban*/
@@ -97,10 +115,10 @@
   padding-bottom: 61px !important; //FIXME
   border: 0px !important;
 
-  @include media-breakpoint-up(md) {
-    padding-bottom: 60px !important;
-    padding-top: 113px !important;
-  }
+  //@include media-breakpoint-up(md) {
+  //  padding-bottom: 60px !important;
+  //  padding-top: 113px !important;
+  //}
 }
 
 
@@ -144,7 +162,7 @@
   border-top: 0px !important;
 }
 .table-sm > :not(caption) > * > * {
-    padding: 0.75rem;
+    padding: 0.5rem;
 }
 .modal-content{
   border: 0px !important;
@@ -157,6 +175,10 @@
 
 .primary {
     color: $primary !important;
+}
+
+.o_loading_indicator {
+  display: none;
 }
 
 //.modal-body{
