--- a/sleep/static/src/css/sleep.css
+++ b/sleep/static/src/css/sleep.css
@@ -16,9 +16,9 @@
     display: none !important;
 }
 
-/*.o-mail-DiscussSystray-class {*/
-/*    display: none !important;*/
-/*}*/
+.o-mail-DiscussSystray-class {
+    display: none !important;
+}
 
 .o-mail-ChatWindow-threadAvatar {
     padding-left: 35% !important;
@@ -35,14 +35,14 @@
 
 .o-mail-ChatWindow-threadAvatar > img {
     border-radius: 50% !important;
-    height: 40px !important;
-    width: 40px !important;
+    height: 50px !important;
+    width: 50px !important;
 }
 
 .o-mail-ChatWindow-header {
-    background-color: transparent !important;
-    backdrop-filter: blur(30px) !important;
-    -webkit-backdrop-filter: blur(30px) !important;
+    background-color: rgba(20,30,54, 0.5) !important;
+    backdrop-filter: blur(10px) !important;
+    -webkit-backdrop-filter: blur(10px) !important;
     /*box-shadow: 0 5px 10px 3px rgba(0, 0, 0, .05) !important;*/
     position: fixed !important;
     z-index: 92 !important;
