--- a/sleep/views/web.xml
+++ b/sleep/views/web.xml
@@ -3,14 +3,98 @@
     <odoo>
         <template id="webclient_bootstrap_icon" inherit_id="web.webclient_bootstrap">
             <xpath expr="//link[@rel='apple-touch-icon']" position="replace">
-                <link rel="apple-touch-icon" href="/sleep/static/img/odoo-icon-512x512.png"/>
+                <link rel="apple-touch-icon" href="/sleep/static/img/odoo-icon-513x513.webp"/>
+<!--                <script src="https://kit.fontawesome.com/ccaf136dc3.js" crossorigin="anonymous"></script>-->
             </xpath>
         </template>
 
         <template id="webclient_bootstrap_color" inherit_id="muk_web_colors.webclient_bootstrap">
             <xpath expr="//meta[@name='theme-color']" position="replace">
-                <meta name="theme-color" t-att-content="'#1b1d26' if request.httprequest.cookies.get('color_scheme') == 'dark' else '#ffffff'"/>
+                <meta name="theme-color" t-att-content="'#141E36' if request.httprequest.cookies.get('color_scheme') == 'dark' else '#ffffff'"/>
             </xpath>
         </template>
+
+        <template id="webclient_offline" inherit_id="web.webclient_offline">
+            <xpath expr="//t[@t-call='web.layout']" position="replace">
+                <t t-call="web.layout">
+                    <t t-set="html_data" t-value="{'style': 'height: 100%;'}"/>
+                    <t t-set="title">Offline</t>
+                    <t t-set="head">
+                        <script type="text/javascript">
+                            window.addEventListener('online', () => location.reload());
+                        </script>
+                        <style>
+                            body {
+                            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, "Noto Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+                            padding:0;
+                            margin:0;
+                            background-color: #141e36;
+                            color: #FFFFFF;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            text-align: center;
+                            height: 100vh;
+                            width: 100vw;
+                            user-select: none;
+                            }
+                            .card {
+                            width: 80%;
+                            }
+                            .card img {
+                            width: 96px;
+                            height: auto;
+                            }
+                            .card button {
+                            border-radius: 20px;
+                            background-color: #0078ff;
+                            color: #FFFFFF;
+                            border: 1px solid #0078ff;
+                            padding: .5rem 1rem;
+                            cursor: pointer;
+                            font-size: 1.2rem;
+                            font-weight: 500;
+                            }
+                        </style>
+                        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+                    </t>
+                    <div class="card">
+                        <img t-attf-src="data:image/png;base64,{{odoo_icon}}" alt="Odoo logo"/>
+                        <h1>You are offline</h1>
+                        <p style="text-align: start;">Check your network connection and come back here. App will load as soon as you're back online.</p>
+                        <button onclick="location.reload()">Check again</button>
+                    </div>
+                </t>
+            </xpath>
+        </template>
+
+        <template id="login_layout" inherit_id="web.login_layout">
+            <xpath expr="//t[@t-call='web.frontend_layout']" position="replace">
+                <t t-call="web.frontend_layout">
+                    <t t-set="html_data" t-value="{'style': 'height: 100%;'}"/>
+                    <t t-set="body_classname" t-value="'bg-100'"/>
+                    <t t-set="no_header" t-value="True"/>
+                    <t t-set="no_footer" t-value="True"/>
+
+                    <div class="container py-5">
+                        <div t-attf-class="card border-0 mx-auto bg-100 rounded-0 shadow-sm o_database_list" style="max-width: 300px;background-color: #141e36;">
+                            <div class="card-body" style="background-color: #141e36;">
+                                <div t-attf-class="text-center pb-3 {{'mb-3' if form_small else 'mb-4'}}">
+                                    <img t-attf-src="/web/binary/company_logo{{ '?dbname='+db if db else '' }}" alt="Logo" style="max-height:120px; max-width: 100%; width:auto"/>
+                                </div>
+                                <t t-out="0"/>
+<!--                                <div class="text-center small mt-4 pt-3 border-top" t-if="not disable_footer">-->
+<!--                                    <t t-if="not disable_database_manager">-->
+<!--                                        <a class="border-end pe-2 me-1" href="/web/database/manager">Manage Databases</a>-->
+<!--                                    </t>-->
+<!--                                    <a href="https://www.odoo.com?utm_source=db&amp;utm_medium=auth" target="_blank">Powered by <span>Odoo</span></a>-->
+<!--                                </div>-->
+                            </div>
+                        </div>
+                    </div>
+                </t>
+            </xpath>
+        </template>
+
     </odoo>
 </odoo>
