--- a/sleep/views/article_views.xml
+++ b/sleep/views/article_views.xml
@@ -35,12 +35,12 @@
                 <field name="name"/>
                 <field name="short_name"/>
                 <field name="emoji"/>
-<!--                <field name="color"/>-->
+                <field name="first_color"/>
                 <field name="second_color"/>
                 <templates>
 <!--                    <t t-set="color_name" t-value="0,120,255"/>-->
                     <div t-name="kanban-box" class="article bg-200"
-                         t-attf-style="background-color: rgba(0, 0, 0, 1);border-radius: 20px; border: 0px !important;background-image: radial-gradient(ellipse at center bottom, rgba(0,0,0,1), rgba(#{record.second_color.value},1)"
+                         t-attf-style="background-color: rgba(0, 0, 0, 1);border-radius: 20px; border: 0px !important;background-image: radial-gradient(ellipse at center bottom, rgba(#{record.first_color.value},1), rgba(#{record.second_color.value},1)"
                     >
                         <div t-attf-class="oe_kanban_global_click pt-3 pb-3">
                             <div class="row" style="z-index: 10 !important; position: relative; color: white;">
