--- a/sleep/views/article_views.xml
+++ b/sleep/views/article_views.xml
@@ -12,7 +12,7 @@
                 <field name="description" invisible="1"/>
                 <field name="emoji" invisible="1"/>
                 <field name="color" invisible="1"/>
-                <field name="text" readonly="1"  widget="html" options="{'codeview': true}"/>
+                <field name="text" readonly="1"  widget="html" options="{'codeview': true}" style="margin-bottom: 0px !important;"/>
             </form>
         </field>
     </record>
