--- a/sleep/static/src/css/sleep.scss
+++ b/sleep/static/src/css/sleep.scss
@@ -26,8 +26,11 @@
     }
 }
 .o-mail-ChatWindow-typing{
-    padding-bottom: 80px !important;
+    padding-bottom: 60px !important;
     background-color: transparent !important;
+    @supports (-webkit-touch-callout: none) {
+        padding-bottom: 80px !important;
+    }
 }
 
 .o-mail-DateSection {
@@ -43,7 +46,10 @@
         bottom: 0px !important;
         right: 0px !important;
         left: 0px !important;
-        padding-bottom: 80px !important;
+        padding-bottom: 60px !important;
+        @supports (-webkit-touch-callout: none) {
+            padding-bottom: 80px !important;
+        }
     }
 }
 
@@ -254,12 +260,12 @@ tr.text-info{
 .oe_read_only table {
     border-collapse: separate !important;
     border-spacing: 0px 20px !important;
-    padding: 40px 20px 80px 20px !important;
+    padding: 40px 20px 0px 20px !important;
 }
 .oe_edit_only table {
     border-collapse: separate !important;
     border-spacing: 0px 20px !important;
-    padding: 40px 20px 80px 20px !important;
+    padding: 40px 20px 0px 20px !important;
 }
 
 td:first-child,
