--- a/sleep/static/src/css/sleep.scss
+++ b/sleep/static/src/css/sleep.scss
@@ -22,7 +22,10 @@
     //    padding-bottom: 126px !important;
     //}
     @include media-breakpoint-down(md) {
-        padding-bottom: 101px !important;
+        padding-bottom: 81px !important;
+        @supports (-webkit-touch-callout: none) {
+            padding-bottom: 101px !important;
+        }
     }
 }
 .o-mail-ChatWindow-typing{
