--- a/sleep/views/ritual_line_views.xml
+++ b/sleep/views/ritual_line_views.xml
@@ -8,6 +8,7 @@
             <form>
                 <group>
                     <field name="name"/>
+                    <field name="sequence"/>
                 </group>
             </form>
         </field>
