--- a/sleep/views/ritual_views.xml
+++ b/sleep/views/ritual_views.xml
@@ -12,7 +12,7 @@
                 </div>
                 <div class="oe_read_only" invisible="is_check == True">
                     <field name="line_ids" nolabel="1" readonly="1">
-                        <tree no_open="1" default_order="sequence desc, id desc"
+                        <tree no_open="1" default_order="sequence desc, id"
                               decoration-primary="is_check == True"
                               decoration-info="is_check == False">
                             <field name="is_check" nolabel="1" widget="boolean_sleep_icon" string=""
@@ -23,7 +23,7 @@
                 </div>
                 <div class="oe_edit_only">
                     <field name="line_ids" nolabel="1" readonly="0"  height="100px">
-                        <tree no_open="1" default_order="sequence desc, id desc"  height="100px">
+                        <tree no_open="1" default_order="sequence desc, id"  height="100px">
                             <control>
                                 <button name="add_line" string="Add line" class="btn-link" type="object"/>
                             </control>
