--- a/app_theme/static/src/css/app_theme.scss
+++ b/app_theme/static/src/css/app_theme.scss
@@ -127,10 +127,9 @@
   //  padding-top: 113px !important;
   //}
 }
-
-//.o_kanban_ghost {
-//  display: none !important;
-//}
+.form-control {
+  border-radius: 0px !important;
+}
 
 
 
