--- a/sleep/static/src/css/sleep.scss
+++ b/sleep/static/src/css/sleep.scss
@@ -151,6 +151,10 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     padding-right: 15px !important;
 }
 
+.o_kanban_ghost {
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+}
 
 //.btn-primary {
 //    box-shadow: 0px 0px 30px 5px rgba(0, 120, 255, 1) !important;
